style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: inherit;
}

* {
  font-family: Helvetica;
  letter-spacing: 1.5px;
  color: rgb(1, 47, 73);
}




.body{
  display: flex;
}

.header{
  display: flex;
  flex-direction: row;
  position: sticky;
  top: 0;
  margin-top: 0em;
  z-index: 1;
  height: 5rem;
  color: white;
  align-items: center;
  justify-content: center;
  font-size: 30px;
  background-color: rgb(54, 2, 2);

}

.footer{
  display: flex;
  position: sticky;
  bottom: 0;
  margin-top: -1em;
  background-color: rgb(54, 2, 2);
  z-index: 1;
  height: 4.9rem;
  justify-content: center;
}


input{
  background-color: rgb(0, 32, 53);
  color: white;
  cursor: pointer;
  font-weight: bolder;
  padding: .5rem;
  font-size: .9rem;
}

input:hover{
  background-color: rgb(255, 255, 255);
  color:  rgb(0, 32, 53);
}

.img{
  height: 40px;
  width: 100px;
}

#menu>*:hover{
  border-bottom: 1px solid rgb(10, 59, 194);
  cursor: pointer;
}

#menu-name:hover{
  width: 244px;
}

#menu-project:hover{
  width: 97px;
}

#menu-about:hover{
  width: 68px;
}

#menu-container{
  display: flex;
  background: linear-gradient(-45deg, rgb(143, 120, 120), rgb(255, 255, 255));

  align-items: center;
  height: 85vh;
  width: 29rem;
  border-right: 3px solid rgb(206, 206, 206);
  position: fixed;
}

#menu{
  display: flex;
  flex-direction: column;
  width: 100%;
  align-items: center;
  height: 27vh;
  justify-content: space-around;
  
}

#body-container{
  display: flex;
  flex-direction: column;
  align-items: center;
   justify-content: center;
   width: 95%;
   margin-left: 20rem;
   
}

.bio {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: white;
  width: 90%;
  justify-content: center;
  align-self: flex-end;
  height: 86.5vh;
}



p{
  font-size: 22px;
}



.bio2{
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: white;
  width: 90%;
  justify-content: center;
  align-self: flex-end;
  height: 86.5vh;



}


.projects-container{
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  width: 55%;
  background: white;

}

#contact-info{
  display: flex;
  flex-direction: row;
  align-self: flex-start;
}


.app{
  width: 100%;
  padding: 1rem;
}

.btn{
  display: flex;
  flex-direction: row;
}

.btn-container{
  align-self: flex-start;
}

.title{
  font-weight: bolder;
  font-size: 2rem;

}


#personal-bio{
  margin-bottom: 2rem;
}

.contact{
  padding: 1rem 1rem 0 0;
  height: 25px;
  width: 25px;
  cursor: pointer;
}

.project{
  border: 1px solid rgb(212, 212, 235);
  margin-bottom:  3rem;
  background-color: rgb(255, 255, 255);
}

.picture{
  cursor: pointer;
  width:700px;
  height:350px;
}

.sub-headline{
  width: 80%;
  background-color:white;
  font-size: 22px;
  color: rgb(1, 47, 73);
}

.hidden{
  display: none;
}

h5{
  padding: 2rem;
  color: rgb(255, 255, 255);
}

#menu1{
  display: none;
}

h2{
  font-weight:normal
}

@media screen and (max-width: 1410px){
  #menu-container{
    width: 250px;
  }
  .picture{
    width: 500px;
    height: 250px;
  }

  #body-container{
    width: 1150px;
  }

}


@media screen and (max-width: 900px){
  #menu1>*:hover{
    border-bottom: 1px solid rgb(140, 158, 207);
    cursor: pointer;
  }

  #menu-name:hover{
    width: 162.5px;
  }
  
  #menu-project:hover{
    width: 66px;
  }
  
  #menu-about:hover{
    width: 47px;
  }

  #menu1{
    display: flex;
    align-items: center;
    justify-content: space-around;
    width: 100%;
  }

  #menu-name{
    min-width: 100px;
    font-size: 10px;

  }

 #menu-project, #menu-about{
    font-size: 10px;
  }

  h1{
    display: flex;
    flex-direction: row;
    margin-left: 2.5rem;
    flex-wrap: wrap;
    width: 330px;
  }


  .sub-headline{
    display: flex;
    flex-direction: row;
    margin-left: 2.5rem;
    flex-wrap: wrap;
    width: 329px;
  }

  .picture{
    width: 100%;
    height: 55%;
  }

  .nav-bar{
    display: block;
  }

  #body-container{
   margin: 0;
  }

  #menu-container{
    display: none;
  }

  .info{
    width: 100%;
  }
  
  p{
    font-size: 15px;
  }


  .title{
    font-size: 20px;
  }


   .app{
     display: flex;
     flex-direction: column;
     align-items: center;
    width: 100%;
    margin-right: 0;
  }
  
  .description{
    width: 390px;
  }



  .project{
    height: 450px;
    margin-left: 1rem;
  }
#ttt {
  padding-bottom: 20px;
}
 
#library-p, #to-do{
  padding-bottom:17px;
}

.btn{
  display: flex;
  justify-content: center;
}

h2{
  color: rgb(255, 255, 255);
}

.header, .footer{
  width: 125%;
}
 

}

